fix: jumping selector and description bug

--- a/src/_component/hero-carousel/hero-carousel.scss
+++ b/src/_component/hero-carousel/hero-carousel.scss
@@ -154,24 +154,26 @@
 
   &__item {
     border: 0;
-    width: var(--item-width);
-    height: var(--item-height);
 
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
     transition: 150ms ease-out;
+    flex-direction: column;
 
     position: absolute;
-
-    background-image: var(--bg);
-    background-size: cover;
-    background-position: center;
-
-    box-shadow: 1px 0 0.75rem #000;
-
     top: 0;
+
+    &-bg {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      position: relative;
+      width: var(--item-width);
+      height: var(--item-height);
+      background-image: var(--bg);
+      background-size: cover;
+      background-position: center;
+      box-shadow: 1px 0 0.75rem #000;
+    }
 
     &:nth-child(7n + 1) {
       left: calc(
@@ -247,9 +249,12 @@
 
       text-align: center;
       pointer-events: none;
+      width: var(--item-width);
+      opacity: 0.2;
+      transition: 250ms;
     }
 
-    &-description,
+    // &-description,
     &-remove {
       display: none;
     }
@@ -277,8 +282,12 @@
       flex-wrap: nowrap;
       height: 2.5rem;
 
-      &::before {
-        content: '';
+      &-spacer {
+        height: 2.5rem;
+        line-height: 2.5rem;
+        opacity: 0;
+        overflow: hidden;
+        width: 0;
       }
     }
 
@@ -295,7 +304,8 @@
       gap: 1rem;
       grid-column-start: 2;
       position: relative;
-      height: var(--item-height);
+      // height: var(--item-height);
+      height: 30.3125rem;
     }
 
     &-title {
@@ -379,13 +389,13 @@
           content: '#{$i} ';
         }
 
-        &
-          ~ .hero-carousel__item-description-list
-          .hero-carousel__item-description:nth-child(#{$i}) {
-          display: inline-block;
-          max-width: 280px;
-          width: 100%;
-        }
+        // &
+        //   ~ .hero-carousel__item-description-list
+        //   .hero-carousel__item-description:nth-child(#{$i}) {
+        //   display: inline-block;
+        //   max-width: 280px;
+        //   width: 100%;
+        // }
 
         &
           ~ .hero-carousel__background-list
@@ -397,6 +407,10 @@
         & ~ .hero-carousel__item-grid {
           & [for='hero-carousel-#{$i}'] {
             border-width: 0;
+
+            .hero-carousel__item-description {
+              opacity: 1;
+            }
           }
 
           & .hero-carousel__item {
